# mind-mesh

./: .gitignore  .npmrc  .prettierignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs  project.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: m20220101_000001_create_table.rs
src-tauri/repository/: Cargo.toml
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/commands/: file_commands.rs  mod.rs  project_commands.rs  tab_commands.rs
src-tauri/src/git/: mod.rs
src-tauri/src/ui/: mod.rs  tab_manager.rs
src/components/: browser-tab.tsx  layout.tsx  markdown-editor.tsx  mindmap.tsx  nav-main.tsx  nav-user.tsx  sidebar-left.tsx  sidebar-right.tsx  tab-bar.tsx  team-switcher.tsx  theme-provider.tsx  tree-view.tsx  windows-window-control.tsx
src/components/ui/: context-menu.tsx  dialog.tsx
src/pages/: dashboard.tsx
src/router/: index.tsx
